@startuml

'Diagramme de classes (PlantUML)'

'Configuration charte graphique'
hide empty methods
hide circle
skinparam class {
  BackgroundColor White
  ArrowColor Black
  BorderColor Black
}

'Classes, énumérations, etc.'

class MiniSocs {
  - nom: String
}
class Utilisateur {
  - pseudonyme: String
  - nom: String
  - prénom: String
  - courriel: String
  - etatCompte: ÉtatCompte
}
enum ÉtatCompte <<enum>> {
  ACTIF
  DÉSACTIVÉ
  BLOQUÉ
}
class Membre {
  - pseudoReseau: String
  - typeMembre: TypeMembre
}
enum TypeMembre <<enum>> {
  ADM
  MOD
  MEM
}
class ReseauSocial {
  - nom: String
  - etatReseau: EtatReseau
}
enum EtatReseau <<enum>> {
  FERMÉ
  OUVERT
}
class Message {
  - idMessage: int
  - contenu : String
  - accepté: boolean
  - caché: boolean
}

'Associations, etc.'
MiniSocs *--> "*" Utilisateur
MiniSocs *--> "*" Membre
MiniSocs *--> "*" ReseauSocial
Utilisateur <|-- Membre
ReseauSocial "1..*" -- "1..*" Membre : < fait partie
Message "*" -- "1" Membre : < a posté
ReseauSocial o-- "*" Message : < posté dans

'Au besoin, aides pour le positionnement'

@enduml
